# multi-doc-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.py
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: custom_logger.py
notebooks/: rag.ipynb
src/components/document_ingestion/: data_ingestion.py
src/config/: config.yaml
src/entity/: artifact_entity.py  config_entity.py
src/exception/: custom_exception.py
src/logger/: custom_logger.py
src/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
