[project]
name = "multi-doc-rag"
version = "0.1.0"
description = "Multi document RAG chatbot"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langsmith>=0.7.16",
    "notebook>=7.5.5",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn[standard]>=0.41.0",
]

[tool.setuptools]
packages = ["multi_doc_chat"]
